# Mean-Value-Coordinates-for-Closed-Triangular-Mesh

./: CMakeLists.txt  README.md  build_instructions  main.cpp
Exec/: CMakeLists.txt  main.cpp
MVI/: meanValueInterpolation.cpp  meanValueInterpolation.h
Mean_Value_Coordinates/Exec/: main.cpp
Mean_Value_Coordinates/MVI/: CMakeLists.txt  meanValueInterpolation.h
Mean_Value_Coordinates/ObjLoader/: CMakeLists.txt  objloader.cpp  objloader.h
Mean_Value_Coordinates/utility/: glutil.cpp  glutil.h  meshDeform.cpp  meshDeform.h
ObjLoader/: objloader.cpp  objloader.h
utility/: CMakeLists.txt  colorInterpolation.cpp  colorInterpolation.h  glutil.cpp  meshDeform.cpp  meshDeform.h
